Fix JDK 11 compatibility